test/type/wrong/hr1.kk.out
test/type/wrong/hr1.kk(7,10): error: abstract type(s) escape(s) into the context
 term : fn(){ !r }
 inferred type: () -> <st<$h>,exn> int
 hint : give a higher-rank type annotation to a function parameter?